cambio para g-pages

--- a/dashboard.html
+++ b/dashboard.html
@@ -53,6 +53,6 @@
             </div>
         </div>
     </div>
-    <script src="js/dashboard.js"></script>
+    <script src="Parcial-2--Aplicaciones-Web-Cliente/js/dashboard.js"></script>
 </body>
 </html>
